# bmw-wallbox-ha

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff-format-on-save.md  CHANGELOG.md  CONTRIBUTING.md  EXPECTED_COVERAGE_REPORT.md  LICENSE  Makefile  README.md  hacs.json  info.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  run_tests_debug.py
.cursor/rules/: add-command.mdc  add-control.mdc  add-ocpp-handler.mdc  add-sensor.mdc  debugging.mdc  project.mdc  testing.mdc
.github/: DEVELOPMENT.md
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/bmw_wallbox/: README.md  __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  sensor.py  strings.json
custom_components/bmw_wallbox/docs/: ARCHITECTURE.md  CONSTANTS.md  CONTEXT.md  COORDINATOR.md  DATA_SCHEMAS.md  ENERGY_SENSORS.md  ENTITIES.md  OCPP_HANDLERS.md  PATTERNS.md  RELEASES.md  SSL_SETUP.md  TESTING.md  TROUBLESHOOTING.md  WALLBOX_CAPABILITIES.md
custom_components/bmw_wallbox/translations/: en.json
tests/: TESTING_CHECKLIST.md  __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_number.py  test_sensor.py
