[project]
name = "bmw_wallbox"
version = "1.1.0"
description = "Home Assistant integration for BMW Wallbox using OCPP 2.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "João Belo", email = ""},
]
keywords = ["homeassistant", "ocpp", "wallbox", "bmw", "ev-charging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[tool.ruff]
# Home Assistant targets Python 3.11+
target-version = "py311"

# Same as Home Assistant core
line-length = 88

# Enable specific rule sets following Home Assistant standards
lint.select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "E",     # pycodestyle errors (includes blank line rules)
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings (includes blank line warnings)
]

lint.ignore = [
    "E501",    # line too long (handled by formatter)
    "S101",    # use of assert (required for tests)
    "PLR2004", # magic value comparison
    "PLR0913", # too many arguments
    "COM812",  # trailing comma (conflicts with formatter)
    "S105",    # possible hardcoded password (false positives in tests)
    "S106",    # possible hardcoded password (false positives in tests)
    "S108",    # probable insecure usage of temp file/directory
    "ARG002",  # unused method argument (common in event handlers)
]

# Additional blank line rules
[tool.ruff.lint.pycodestyle]
max-line-length = 88

# Exclude patterns
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, asserts, and relative imports
"tests/*" = ["PLR2004", "S101", "PLR0913"]

[tool.ruff.lint.isort]
# Home Assistant import order
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

# Known first party for this integration
known-first-party = ["custom_components.bmw_wallbox"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 25

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 25
max-returns = 15
max-statements = 100

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
]

[tool.coverage.run]
source = ["custom_components/bmw_wallbox"]
omit = [
    "tests/*",
    "custom_components/bmw_wallbox/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
precision = 2

[tool.mypy]
python_version = "3.11"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
# Less strict for tests
module = "tests.*"
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
